--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
         "animate.css": "^4.1.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
-        "react-scripts": "5.0.1",
+        "react-scripts": "4.0.3",
         "styled-components": "^5.3.5",
         "typescript": "^4.6.3",
-        "web-vitals": "^2.1.4",
-        "web3": "^1.7.3"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
