--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,24 @@
 name: deploy
 
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches:
+            - master
 
 jobs:
-  deploy:
-    runs-on: ubuntu-20.04
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-node@v1
-          with: node-version: '16.x'
-        - name: Build web-app
-          run: |
-            npm ci
-            npm run build
-        - name: Deploy to gh-pages
-          uses: peaceiris/actions-gh-pages@v3
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./build
+    deploy:
+        runs-on: ubuntu-20.04
+        steps:
+            - uses: action/checkout@v2
+            - uses: actions/setup-node@v1
+              with:
+                  node-version: "16.x"
+            - name: Build web-app
+              run: |
+                  npm ci
+                  npm run build
+            - name: Deploy to gh-pages
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./build
