--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     deploy:
         runs-on: ubuntu-20.04
         steps:
-            - uses: action/checkout@v2
+            - uses: actions/checkout@v2
             - uses: actions/setup-node@v1
               with:
                   node-version: "16.x"
