--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "metamask-payment-demo",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "private": true,
+    "homepage": "https://robson036.github.io/metamask-transaction-demo/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
